# openrenderer

./: .gitignore  CMakeLists.txt  README.md  city_scene.json  cornellbox_scene.json  main.cpp  marry_scene.json  normal_cornellbox_scene.json  problems.md  test.txt
include/: buffer.hpp  config.hpp  geometry.hpp  gui.hpp  loader.hpp  mipmap.hpp  pipeline.hpp  renderer.hpp  shader.hpp  texture.hpp  utils.hpp
scripts/: denoise.py  test.py
src/: buffer.cpp  config.cpp  geometry.cpp  gui.cpp  loader.cpp  pipeline.cpp  renderer.cpp  texture.cpp
